--- a/Working.ipynb
+++ b/Working.ipynb
@@ -1354,6 +1354,73 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def skaiciuokle_1 (ilgis, plotis, aukstis, forma):\n",
+    "    if forma ==\"kubas\":\n",
+    "        return f'Perimetras yra {(ilgis+plotis)*2}, Plotas yra {ilgis * plotis}, Turis yra {ilgis * plotis * aukstis}'\n",
+    "    else:\n",
+    "        return f'Tokios figuros skaiciavimu neturiu'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Perimetras yra 14, Plotas yra 12, Turis yra 60\n",
+      "Perimetras yra 54, Plotas yra 182, Turis yra 2730\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (skaiciuokle_1(4,3,5,'kubas'))\n",
+    "print (skaiciuokle_1(14,13,15,'kubas'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def skaiciuokle_2 (ilgis, plotis, aukstis, forma):\n",
+    "    kubo_perimetras = (ilgis+plotis)*2\n",
+    "    kubo_plotas = ilgis * plotis\n",
+    "    kubo_turis = ilgis * plotis * aukstis\n",
+    "    if forma ==\"kubas\":\n",
+    "        return f'Perimetras yra {kubo_perimetras}, Plotas yra {kubo_plotas}, Turis yra {kubo_turis}'\n",
+    "    else:\n",
+    "        return f'Tokios figuros skaiciavimu neturiu'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Perimetras yra 14, Plotas yra 12, Turis yra 60\n",
+      "Perimetras yra 54, Plotas yra 182, Turis yra 2730\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (skaiciuokle_2(4,3,5,'kubas'))\n",
+    "print (skaiciuokle_2(14,13,15,'kubas'))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1362,10 +1429,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def list_tikrintojas (list1, list2):\n",
+    "    suma = 0\n",
+    "    for number1 in set(list1):\n",
+    "        for number2 in list2:\n",
+    "            if number1 == number2:\n",
+    "                suma += 1\n",
+    "    return suma\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (list_tikrintojas([1,2], [1,1,2,3,3,3,3,1]))\n",
+    "print (list_tikrintojas([1,2, 1], [1,1,2,3,3,3,3,1]))"
+   ]
   }
  ],
  "metadata": {
