--- a/HomeWork_3.ipynb
+++ b/HomeWork_3.ipynb
@@ -26,7 +26,7 @@
     "        number -=1\n",
     "        slaptazodis.append((random.choice(galimas_pasirinkimas)))\n",
     "    print (slaptazodis)\n",
-    "    print ((f'Jusu slaptazodis yra:'),(''.join(slaptazodis)))\n",
+    "    print ((f'Sugeneruotas slaptazodis yra:'),(''.join(slaptazodis)))\n",
     "     "
    ]
   },
