--- a/HomeWork_3.ipynb
+++ b/HomeWork_3.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,15 +32,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['J', 'V', 'd', '~', '3', '-', 'W', 'N', '*', '9', 'J', ',', '1', '=', '?', 'm', 'x', '|', '?', ':', 'G', 'Z', '6', '!', 'y']\n",
-      "Jusu slaptazodis yra: JVd~3-WN*9J,1=?mx|?:GZ6!y\n"
+      "['(', 'T', 'k', '4', ';', '\"', '#', 'C', 'g', 'l', '~', '^', 's', '<', 'L']\n",
+      "Sugeneruotas slaptazodis yra: (Tk4;\"#Cgl~^s<L\n"
+     ]
+    }
+   ],
+   "source": [
+    "slaptazodzio_generatorius(15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['m', ']', '\\\\', 'o', 'z', 'E', ')', 'H', ',', 's', 'M', 'p', 'G', 'V', ',']\n",
+      "Sugeneruotas slaptazodis yra: m]\\ozE)H,sMpGV,\n"
      ]
     }
    ],
