--- a/Working.ipynb
+++ b/Working.ipynb
@@ -1122,16 +1122,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# https://realpython.com/python-requests/"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "EOL while scanning string literal (Temp/ipykernel_14852/3529259968.py, line 1)",
+     "evalue": "EOL while scanning string literal (Temp/ipykernel_15528/3529259968.py, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\VARTOT~1\\AppData\\Local\\Temp/ipykernel_14852/3529259968.py\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    txt2 = \"pw:\\\\railbaltica-pw.bentley.com:railbaltica-pw-01\\Documents\\Rail Baltica\\Lithuania\\LT_Territorial_Planning_SC\\02_LTGI\\03_Deliverables\\02_Kaunas_Node_SP\\2021.09.28 - VXE016 RB KNS mazgas - A1-A4 alt\\\"\u001b[0m\n\u001b[1;37m                                                                                                                                                                                                                   ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m EOL while scanning string literal\n"
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\VARTOT~1\\AppData\\Local\\Temp/ipykernel_15528/3529259968.py\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    txt2 = \"pw:\\\\railbaltica-pw.bentley.com:railbaltica-pw-01\\Documents\\Rail Baltica\\Lithuania\\LT_Territorial_Planning_SC\\02_LTGI\\03_Deliverables\\02_Kaunas_Node_SP\\2021.09.28 - VXE016 RB KNS mazgas - A1-A4 alt\\\"\u001b[0m\n\u001b[1;37m                                                                                                                                                                                                                   ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m EOL while scanning string literal\n"
      ]
     }
    ],
@@ -1139,6 +1146,46 @@
     "txt2 = \"pw:\\\\railbaltica-pw.bentley.com:railbaltica-pw-01\\Documents\\Rail Baltica\\Lithuania\\LT_Territorial_Planning_SC\\02_LTGI\\03_Deliverables\\02_Kaunas_Node_SP\\2021.09.28 - VXE016 RB KNS mazgas - A1-A4 alt\\\"\n",
     "\n",
     "print (txt2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'requests'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32mC:\\Users\\VARTOT~1\\AppData\\Local\\Temp/ipykernel_15528/2072270154.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mrequests\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'requests'"
+     ]
+    }
+   ],
+   "source": [
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "EOL while scanning string literal (Temp/ipykernel_15528/2669071222.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\VARTOT~1\\AppData\\Local\\Temp/ipykernel_15528/2669071222.py\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    requests.get('pw:\\\\railbaltica-pw.bentley.com:railbaltica-pw-01\\Documents\\Rail Baltica\\Lithuania\\LT_Territorial_Planning_SC\\02_LTGI\\03_Deliverables\\02_Kaunas_Node_SP\\2021.09.28 - VXE016 RB KNS mazgas - A1-A4 alt\\')\u001b[0m\n\u001b[1;37m                                                                                                                                                                                                                          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m EOL while scanning string literal\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "requests.get('pw:\\\\railbaltica-pw.bentley.com:railbaltica-pw-01\\Documents\\Rail Baltica\\Lithuania\\LT_Territorial_Planning_SC\\02_LTGI\\03_Deliverables\\02_Kaunas_Node_SP\\2021.09.28 - VXE016 RB KNS mazgas - A1-A4 alt\\')\n"
    ]
   },
   {
@@ -1459,6 +1506,140 @@
    "source": [
     "print (list_tikrintojas([1,2], [1,1,2,3,3,3,3,1]))\n",
     "print (list_tikrintojas([1,2, 1], [1,1,2,3,3,3,3,1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def search_for_symbols(word):\n",
+    "    special_symbols = \"!@#$%^&*()-+?_=,<>/;'\"\".|\\/[{]}`~\"\n",
+    "    letters = 0\n",
+    "    numbers = 0\n",
+    "    otherSymbols = 0\n",
+    "\n",
+    "    for symbol in word:\n",
+    "        if symbol.isdigit():\n",
+    "            numbers += 1 \n",
+    "        elif symbol.isalpha():\n",
+    "            letters += 1\n",
+    "        elif symbol == \" \":\n",
+    "            otherSymbols += 0\n",
+    "        elif any (c in special_symbols for c in word):\n",
+    "            otherSymbols += 1\n",
+    "    \n",
+    "    print(f\"Your word/sentence is: {word} \\nLetters: {letters}, numbers: {numbers}, special symblos: {otherSymbols}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your word/sentence is: Jonas \"\" \n",
+      "Letters: 5, numbers: 0, special symblos: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_input = input(\"Please enter a word: \")\n",
+    "search_for_symbols(user_input)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your word/sentence is: jonas \"\" \n",
+      "Letters: 5, numbers: 0, special symblos: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "search_for_symbols('jonas ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'y' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mC:\\Users\\VARTOT~1\\AppData\\Local\\Temp/ipykernel_15528/3120813207.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'y' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print (y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sklearn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32mC:\\Users\\VARTOT~1\\AppData\\Local\\Temp/ipykernel_15528/2440152408.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
+     ]
+    }
+   ],
+   "source": [
+    "import sklearn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x=(1,2)\n",
+    "type(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
    ]
   }
  ],
