--- a/Final_Project_gis.ipynb
+++ b/Final_Project_gis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2677,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2678,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
        "'C:\\\\My Documents\\\\Mokymai ir kt info\\\\Python\\\\10_Final_Project'"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 2678,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2679,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2680,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2681,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
        "4  CS6563  SCO.ROA  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 2681,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2682,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 2683,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 2684,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
        "4  CS6563  SCO.ROA  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 2684,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2685,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2686,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,7 @@
        "4  CS6563  SCO.ROA  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 2686,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 2687,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 2688,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +604,7 @@
        "4                     433  CS6563  SCO.ROA  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 2688,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,7 +616,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 2689,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_gis_update.drop('Unnamed: 0', axis='columns', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2690,
    "metadata": {},
    "outputs": [
     {
@@ -670,36 +679,6 @@
        "      <td>CS6881</td>\n",
        "      <td>SCO.ROA</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>A1330180</td>\n",
-       "      <td>Name 3</td>\n",
-       "      <td>2021-12-02</td>\n",
-       "      <td>2023-08-22</td>\n",
-       "      <td>433</td>\n",
-       "      <td>CS6733</td>\n",
-       "      <td>SCO.ROA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>A1330190</td>\n",
-       "      <td>Name 4</td>\n",
-       "      <td>2021-12-02</td>\n",
-       "      <td>2023-08-22</td>\n",
-       "      <td>433</td>\n",
-       "      <td>CS6672</td>\n",
-       "      <td>SCO.ROA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>A1330200</td>\n",
-       "      <td>Name 5</td>\n",
-       "      <td>2023-01-04</td>\n",
-       "      <td>2024-09-23</td>\n",
-       "      <td>433</td>\n",
-       "      <td>CS6563</td>\n",
-       "      <td>SCO.ROA</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -708,31 +687,24 @@
        "  Activity ID Activity Name      Start     Finish  At Completion Duration  \\\n",
        "0    A1330160        Name 1 2022-09-13 2024-05-31                     433   \n",
        "1    A1330170        Name 2 2022-09-13 2024-05-31                     433   \n",
-       "2    A1330180        Name 3 2021-12-02 2023-08-22                     433   \n",
-       "3    A1330190        Name 4 2021-12-02 2023-08-22                     433   \n",
-       "4    A1330200        Name 5 2023-01-04 2024-09-23                     433   \n",
        "\n",
        "    CS ID   Stages  \n",
        "0  CS6992  SCO.ROA  \n",
-       "1  CS6881  SCO.ROA  \n",
-       "2  CS6733  SCO.ROA  \n",
-       "3  CS6672  SCO.ROA  \n",
-       "4  CS6563  SCO.ROA  "
+       "1  CS6881  SCO.ROA  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 2690,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_gis_update.drop('Unnamed: 0', axis='columns', inplace=True)\n",
-    "df_gis_update.head()"
+    "df_gis_update.head(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 2691,
    "metadata": {},
    "outputs": [
     {
@@ -769,59 +741,313 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2692,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_gis_update['act_cs_id'] = (df_gis_update['Activity ID'] +\"/\"+ df_gis_update['CS ID'])\n",
+    "df_gis['act_cs_id'] = (df_gis['Activity ID'] +\"/\"+ df_gis['CS ID'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2693,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (Temp/ipykernel_11004/3635445937.py, line 1)",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Activity ID</th>\n",
+       "      <th>Activity Name</th>\n",
+       "      <th>Start</th>\n",
+       "      <th>Finish</th>\n",
+       "      <th>At Completion Duration</th>\n",
+       "      <th>CS ID</th>\n",
+       "      <th>Stages</th>\n",
+       "      <th>act_cs_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A1330160</td>\n",
+       "      <td>Name 1</td>\n",
+       "      <td>2022-09-13</td>\n",
+       "      <td>2024-05-31</td>\n",
+       "      <td>433</td>\n",
+       "      <td>CS6992</td>\n",
+       "      <td>SCO.ROA</td>\n",
+       "      <td>A1330160/CS6992</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A1330170</td>\n",
+       "      <td>Name 2</td>\n",
+       "      <td>2022-09-13</td>\n",
+       "      <td>2024-05-31</td>\n",
+       "      <td>433</td>\n",
+       "      <td>CS6881</td>\n",
+       "      <td>SCO.ROA</td>\n",
+       "      <td>A1330170/CS6881</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Activity ID Activity Name      Start     Finish  At Completion Duration  \\\n",
+       "0    A1330160        Name 1 2022-09-13 2024-05-31                     433   \n",
+       "1    A1330170        Name 2 2022-09-13 2024-05-31                     433   \n",
+       "\n",
+       "    CS ID   Stages        act_cs_id  \n",
+       "0  CS6992  SCO.ROA  A1330160/CS6992  \n",
+       "1  CS6881  SCO.ROA  A1330170/CS6881  "
+      ]
+     },
+     "execution_count": 2693,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_gis_update.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2694,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Activity ID</th>\n",
+       "      <th>Activity Name</th>\n",
+       "      <th>Start</th>\n",
+       "      <th>Finish</th>\n",
+       "      <th>At Completion Duration</th>\n",
+       "      <th>CS ID</th>\n",
+       "      <th>Stages</th>\n",
+       "      <th>act_cs_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A1330160</td>\n",
+       "      <td>Name 1</td>\n",
+       "      <td>2022-09-13</td>\n",
+       "      <td>2024-05-31</td>\n",
+       "      <td>433</td>\n",
+       "      <td>CS6992</td>\n",
+       "      <td>SCO.ROA</td>\n",
+       "      <td>A1330160/CS6992</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A1330170</td>\n",
+       "      <td>Name 2</td>\n",
+       "      <td>2022-09-13</td>\n",
+       "      <td>2024-05-31</td>\n",
+       "      <td>433</td>\n",
+       "      <td>CS6881</td>\n",
+       "      <td>SCO.ROA</td>\n",
+       "      <td>A1330170/CS6881</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Activity ID Activity Name      Start     Finish  At Completion Duration  \\\n",
+       "0    A1330160        Name 1 2022-09-13 2024-05-31                     433   \n",
+       "1    A1330170        Name 2 2022-09-13 2024-05-31                     433   \n",
+       "\n",
+       "    CS ID   Stages        act_cs_id  \n",
+       "0  CS6992  SCO.ROA  A1330160/CS6992  \n",
+       "1  CS6881  SCO.ROA  A1330170/CS6881  "
+      ]
+     },
+     "execution_count": 2694,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_gis.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2695,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Activity ID</th>\n",
+       "      <th>Activity Name</th>\n",
+       "      <th>Start</th>\n",
+       "      <th>Finish</th>\n",
+       "      <th>At Completion Duration</th>\n",
+       "      <th>CS ID</th>\n",
+       "      <th>Stages</th>\n",
+       "      <th>act_cs_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [Activity ID, Activity Name, Start, Finish, At Completion Duration, CS ID, Stages, act_cs_id]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 2695,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "updvsorg = df_gis_update[~df_gis_update.act_cs_id.isin(df_gis.act_cs_id)]\n",
+    "orgvsupd = df_gis[~df_gis.act_cs_id.isin(df_gis_update.act_cs_id)]\n",
+    "updvsorg\n",
+    "\n",
+    "orgvsupd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2696,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ID kodai ir objektu skaicius abejose lentelese sutampa. Viso objektu yra 112. Duomenys tinkami atnaujinimui\n"
+     ]
+    }
+   ],
+   "source": [
+    "def patikra(updvsorg, orgvsupd):\n",
+    "    updvsorg = df_gis_update[~df_gis_update.act_cs_id.isin(df_gis.act_cs_id)]\n",
+    "    orgvsupd = df_gis[~df_gis.act_cs_id.isin(df_gis_update.act_cs_id)]\n",
+    "    if df_gis_update.act_cs_id.nunique() == len(df_gis_update.act_cs_id):\n",
+    "        if updvsorg.empty and orgvsupd.empty:\n",
+    "            return f'ID kodai ir objektu skaicius abejose lentelese sutampa. Viso objektu yra {df_gis_update.act_cs_id.nunique()}. \\\n",
+    "Duomenys tinkami atnaujinimui'\n",
+    "        elif len(updvsorg) > 0 and orgvsupd.empty:\n",
+    "            return f'ERROR: Rasti nauji objektai ({len(updvsorg)} vnt.), kuriu nera GIS DB. \\n{updvsorg}'\n",
+    "        elif len(orgvsupd) > 0 and updvsorg.empty:\n",
+    "            return f'ERROR: Atnaujinamoje lenteleje truksta objektu esanciu GIS DB ({len(orgvsupd)} vnt.). \\n{orgvsupd}'\n",
+    "        elif len(updvsorg) > 0 and len(orgvsupd) > 0:\n",
+    "            return f'ERROR: Galimos klaidos:Nnatitinka ID/atsirado nauju objektu/objektai istrinti. \\n \\\n",
+    "Objektai, kuriu nera GIS DB:\\n {updvsorg}\\n Objektai, kuriu nera atnaujinamoje lenteleje \\n{orgvsupd}'\n",
+    "    else:\n",
+    "        return 'ERROR: ID reiksmes negali kartotis'\n",
+    "\n",
+    "print (patikra(updvsorg, orgvsupd))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2697,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (Temp/ipykernel_11004/2606455982.py, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\VARTOT~1\\AppData\\Local\\Temp/ipykernel_11004/3635445937.py\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    print(df_gis_update[~df_gis_update.Activity Name.isin(df_gis.Activity Name)])\u001b[0m\n\u001b[1;37m                                                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\VARTOT~1\\AppData\\Local\\Temp/ipykernel_11004/2606455982.py\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    updvsorg = df_gis_update[~df_gis_update.act_cs_id.isin(df_gis.act_cs_id)]\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected indent\n"
      ]
     }
    ],
    "source": [
-    "print(df_gis_update[~df_gis_update.Activity Name.isin(df_gis.Activity Name)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "number of objects mathces in both tables and equals to 112\n",
-      "112\n",
-      "112\n"
-     ]
-    }
-   ],
-   "source": [
-    "if len(df_gis_update) == len(df_gis):\n",
-    "    print (f'number of objects mathces in both tables and equals to {len(df_gis)}')\n",
-    "if len(df_gis_update) == len(df_gis):\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<function patikra1 at 0x000002018E63D280>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print (patikra1)"
+    "#def patikra2(updvsorg, orgvsupd):\n",
+    "    updvsorg = df_gis_update[~df_gis_update.act_cs_id.isin(df_gis.act_cs_id)]\n",
+    "    orgvsupd = df_gis[~df_gis.act_cs_id.isin(df_gis_update.act_cs_id)]\n",
+    "    if df_gis_update.act_cs_id.nunique() == len(df_gis_update.act_cs_id):\n",
+    "        if updvsorg.empty and orgvsupd.empty:\n",
+    "            return f'ID kodai ir objektu skaicius abejose lentelese sutampa. Viso objektu yra {df_gis_update.act_cs_id.nunique()}. Duomenys tinkami atnaujinimui'\n",
+    "        elif len(updvsorg) > 0: # and orgvsupd.empty:\n",
+    "            if len(updvsorg) > 0 and len(orgvsupd) > 0:\n",
+    "                return f'ERROR: Neatitinka kodai esantys abejose lentelese. \\n Atnaujinimu lentele:\\n {updvsorg}\\n GIS lentele \\n{orgvsupd}'\n",
+    "            else:\n",
+    "                return f'ERROR: Rasti nauji objektai ({len(updvsorg)}). Detalus sarasas pateiktas zemiau \\n{updvsorg}'\n",
+    "        elif len(orgvsupd) > 0 and updvsorg.empty:\n",
+    "            return f'ERROR: Truksta objektu ({len(orgvsupd)}). Detalus sarasas pateiktas zemiau \\n{orgvsupd}'\n",
+    "        elif len(updvsorg) > 0 and len(orgvsupd) > 0:\n",
+    "            return f'ERROR: Neatitinka kodai esantys abejose lentelese. \\n Atnaujinimu lentele:\\n {updvsorg}\\n GIS lentele \\n{orgvsupd}'\n",
+    "    else:\n",
+    "        return 'ERROR: ID reiksmes dubliuojasi'\n",
+    "\n",
+    "print (patikra2(updvsorg, orgvsupd))"
    ]
   }
  ],
