--- a/Final_Project_gis.ipynb
+++ b/Final_Project_gis.ipynb
@@ -199,14 +199,14 @@
     "            return f'ID kodai ir objektu skaicius abejose lentelese sutampa. Viso objektu yra {df_gis_update.act_cs_id.nunique()}. \\\n",
     "Duomenys tinkami atnaujinimui'\n",
     "        elif len(updvsorg) > 0 and orgvsupd.empty:\n",
-    "            return f'ERROR: Rasti nauji objektai ({len(updvsorg)} vnt.), kuriu nera GIS DB. \\n{updvsorg}'\n",
+    "            raise NotImplementedError (f\"New objects have appeared ({len(updvsorg)} obj.), that are not in the GIS DB. \\n{updvsorg}\")\n",
     "        elif len(orgvsupd) > 0 and updvsorg.empty:\n",
-    "            return f'ERROR: Atnaujinamoje lenteleje truksta objektu esanciu GIS DB ({len(orgvsupd)} vnt.). \\n{orgvsupd}'\n",
+    "            raise NotImplementedError (f\"Missing objects that are in the GIS DB ({len(orgvsupd)} obj.). \\n{orgvsupd}\")\n",
     "        elif len(updvsorg) > 0 and len(orgvsupd) > 0:\n",
-    "            return f'ERROR: Galimos klaidos:Nnatitinka ID/atsirado nauju objektu/truksta objektu. \\n \\\n",
-    "Objektai, kuriu nera GIS DB:\\n {updvsorg}\\n Objektai, kuriu nera atnaujinamoje lenteleje \\n{orgvsupd}'\n",
+    "            raise NotImplementedError (f\"ID's don't match/New objects are found/Missing objects.\\\n",
+    "                \\n \\n Objects that are not in GIS DB: \\n {updvsorg} \\n \\n Objects that are not in the updated table: \\n {orgvsupd}\")\n",
     "    else:\n",
-    "        return 'ERROR: ID reiksmes negali kartotis'\n",
+    "        raise NotImplementedError (f\"Duplicate IDs are not allowed\")\n",
     "print (patikra())"
    ]
   },
@@ -223,7 +223,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_gis.head(3)"
+    "df_gis.loc[[1, 2, 7, 8, 9, 10, 11, 12]]"
    ]
   },
   {
@@ -232,7 +232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_gis_update.head(3)"
+    "df_gis_update.loc[[1, 25, 7, 8, 9, 10, 11, 12]]"
    ]
   },
   {
@@ -252,7 +252,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "updated.loc[[6, 7, 8, 9, 10, 11, 12]]"
+    "updated.loc[[1, 2, 7, 8, 9, 10, 11, 12]]"
    ]
   },
   {
