--- a/Final_Project_gis.ipynb
+++ b/Final_Project_gis.ipynb
@@ -196,8 +196,8 @@
     "    orgvsupd = df_gis[~df_gis.act_cs_id.isin(df_gis_update.act_cs_id)]\n",
     "    if df_gis_update.act_cs_id.nunique() == len(df_gis_update.act_cs_id):\n",
     "        if updvsorg.empty and orgvsupd.empty:\n",
-    "            return f'ID kodai ir objektu skaicius abejose lentelese sutampa. Viso objektu yra {df_gis_update.act_cs_id.nunique()}. \\\n",
-    "Duomenys tinkami atnaujinimui'\n",
+    "            return f'ID codes, number of object match. Total number of objects - {df_gis_update.act_cs_id.nunique()}. \\\n",
+    "Data can be updated'\n",
     "        elif len(updvsorg) > 0 and orgvsupd.empty:\n",
     "            raise NotImplementedError (f\"New objects have appeared ({len(updvsorg)} obj.), that are not in the GIS DB. \\n{updvsorg}\")\n",
     "        elif len(orgvsupd) > 0 and updvsorg.empty:\n",
@@ -243,7 +243,7 @@
    "source": [
     "updated = df_gis.merge(df_gis_update, how='left', on=['act_cs_id'], suffixes=('', '_new'))\n",
     "updated[['Start', 'Finish', 'At Completion Duration']] = np.where(pd.notnull(updated[['Start_new', 'Finish_new', 'At Completion Duration_new']]), updated[['Start_new', 'Finish_new', 'At Completion Duration_new']], updated[['Start_new', 'Finish_new', 'At Completion Duration_new']])\n",
-    "updated.drop(['Start_new', 'Finish_new', 'Activity ID_new', 'Activity Name_new', 'At Completion Duration_new', 'CS ID_new', 'Stages_new'], axis=1, inplace=True)"
+    "updated.drop(['act_cs_id', 'Start_new', 'Finish_new', 'Activity ID_new', 'Activity Name_new', 'At Completion Duration_new', 'CS ID_new', 'Stages_new'], axis=1, inplace=True)"
    ]
   },
   {
